@@ -11,5 +11,5 @@ DIST poppler-0.12.4.tar.gz 1674400 RMD160 9c212ebb8fc3d4cbc532f1c826428cc4d195cb
 EBUILD poppler-0.12.3-r3.ebuild 2798 RMD160 cff94d54b4290fafe11d16b1ffd56b0104e7b39b SHA1 3ca019b2a41b8a5e14d2471ef73dee6b4758fe91 SHA256 2bffaada1b931e1b115ad0173ccf7ea29e94ee1a78a970daf8673df61fe5a563
 EBUILD poppler-0.12.3-r5.ebuild 2866 RMD160 27e5715b1d9ecd1d5af75bc88976566d11958114 SHA1 b9e481ecbe5a04e6a3f42783d139a60041916ee8 SHA256 00b846bc70c42a8e74ff5394a90c0e5c62b552dcf90d5dfe32535e307cfc4d53
 EBUILD poppler-0.12.4-r1.ebuild 2963 RMD160 8f204fcf3b2496d4088f8a5ba820e5098fd8b9ac SHA1 8ac7650287af76aec35b1fe8d75ee9576ccae9a1 SHA256 1538f4a09473db53e8bcb853956ccc771cffc53b887db65a55799d6d3e826c64
-MISC ChangeLog 32428 RMD160 0460c66f9dcf1a07766bd42a97a3efd3a37e117a SHA1 b2e75c292c163d09238f77c95bedc21e7c854f61 SHA256 309b641288e5d072648ae5002e230efec018ec108a47839f7ff5318e93df33f2
-MISC metadata.xml 565 RMD160 6a9e714721911707b23fb27535d64ab92c90a5f8 SHA1 ca7711ec7b7d2953310ae3b00ff2f447371c103f SHA256 ec946c05ddfa21325d7cb705cee3342f4a95a1d08b02f324e4bac36bfc479e0b
+MISC ChangeLog 32548 RMD160 9d0c283a1c1ae9326e41efaaa4cd8d63ac5d429a SHA1 ff051d8c5aa884c5222747d29f4cc90a69f0b417 SHA256 0b16ef3444b15d5b8293524c2d79a8c82e026e1579f83ea6c623f5dd503fb8dd
+MISC metadata.xml 662 RMD160 b2bfa73aa44dfcdd9174ab7ae7e210957dd1dead SHA1 c53dbd326209bbbd743a539c08a07bb4d045507b SHA256 484bd11aa8a96c00b419805d8ca7537ac1adb99385894ff0f3d6cb7f8d1cc3ae
