@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-  <herd>desktop-misc</herd>
+  <maintainer>
+    <email>yngwin@gentoo.org</email>
+    <name>Ben de Groot</name>
+  </maintainer>
   <herd>kde</herd>
   <herd>printing</herd>
   <use>
-    <flag name='abiword'>Enable support for <pkg>app-office/abiword</pkg> output. Requires <pkg>dev-libs/libxml2</pkg>.</flag>
+    <flag name='abiword'>
+      Enable support for <pkg>app-office/abiword</pkg> output. Requires
+      <pkg>dev-libs/libxml2</pkg>.
+    </flag>
     <flag name='xpdf-headers'>Install xpdf headers.</flag>
     <flag name='exceptions'>Enable exceptions throwing.</flag>
-    <flag name='utils'>Install command-line PDF converters and various utilities.</flag>
+	<flag name='utils'>
+      Install command-line PDF converters and various utilities.
+    </flag>
   </use>
 </pkgmetadata>
