@@ -1,6 +1,9 @@
 # ChangeLog for app-text/poppler
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/ChangeLog,v 1.227 2010/03/16 12:18:00 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/ChangeLog,v 1.228 2010/03/18 14:31:21 yngwin Exp $
+
+  18 Mar 2010; Ben de Groot <yngwin@gentoo.org> metadata.xml:
+  Reassign to me instead of desktop-misc herd which I left.
 
 *poppler-0.12.4-r1 (16 Mar 2010)
 
